[package]
name = "data-watch"
version = "0.1.0"
authors = ["Jas Bertovic <jas@bertovic.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="1.9", features=["attributes"]}
async-trait = "0.1"
surf = "2.2"
xactor = "0.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jmespatch = { version = "0.3.0", features = ["sync"] }

[dev-dependencies]
env_logger = "0.8"